# 3D_Viewer_c

src/: 3D_Viewer.pro  CMakeLists.txt  Makefile  glview.cpp  glview.h  log.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  parser.c  parser.h  structs.h  transform.c  transform.h
src/test/: test.c
src/view/: glview.cpp  glview.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
